include_HEADERS = \
	libtableau.h

pkginclude_HEADERS = \
	libtableau/definitions.h \
	libtableau/error.h \
	libtableau/extern.h \
	libtableau/features.h \
	libtableau/types.h

EXTRA_DIST = \
	libtableau.h.in \
	libtableau/definitions.h.in \
	libtableau/features.h.in \
	libtableau/types.h.in

DISTCLEANFILES = \
	libtableau.h \
	libtableau/definitions.h \
	libtableau/features.h \
	libtableau/types.h \
	Makefile \
	Makefile.in

