MSVSCPP_FILES = \
	libcerror/libcerror.vcproj \
	libcnotify/libcnotify.vcproj \
	libtableau/libtableau.vcproj \
	tableau_test_handle/tableau_test_handle.vcproj \
	tableau_test_security_values/tableau_test_security_values.vcproj \
	tableau_test_values_table/tableau_test_values_table.vcproj \
	tableaucontrol/tableaucontrol.vcproj \
	tableauinfo/tableauinfo.vcproj \
	libtableau.sln

EXTRA_DIST = \
	$(MSVSCPP_FILES)

MAINTAINERCLEANFILES = \
	Makefile.in

distclean: clean
	/bin/rm -f Makefile

