MSVSCPP_FILES = \
	libcerror/libcerror.vcproj \
	libclocale/libclocale.vcproj \
	libcnotify/libcnotify.vcproj \
	libcthreads/libcthreads.vcproj \
	libtableau/libtableau.vcproj \
	libuna/libuna.vcproj \
	tableau_test_error/tableau_test_error.vcproj \
	tableau_test_handle/tableau_test_handle.vcproj \
	tableau_test_notify/tableau_test_notify.vcproj \
	tableau_test_security_values/tableau_test_security_values.vcproj \
	tableau_test_support/tableau_test_support.vcproj \
	tableau_test_values_table/tableau_test_values_table.vcproj \
	tableaucontrol/tableaucontrol.vcproj \
	tableauinfo/tableauinfo.vcproj \
	libtableau.sln

EXTRA_DIST = \
	$(MSVSCPP_FILES)

MAINTAINERCLEANFILES = \
	Makefile.in

distclean: clean
	/bin/rm -f Makefile

